test/spec_vectors/type-subtyping/fail/module_61.wat
(module (type $s0 (sub (struct))) (type $a0 (sub $s0 (array i32))))